updates to profile page

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,14 +2,17 @@
   "name": "artist-hub",
   "version": "0.1.0",
   "private": true,
+  
   "dependencies": {
-    "@emotion/react": "^11.11.0",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.14.0",
-    "@mui/material": "^5.14.0",
+    "@date-io/date-fns": "^3.2.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "5.18.0",
+    "@mui/material": "^5.18.0",
+    "@mui/x-date-pickers": "^8.21.0",
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.4.0",
-    "date-fns": "^2.30.0",
+    "date-fns": "^4.1.0",
     "framer-motion": "^10.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
