--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "server": "cd backend server.js",
     "build": "npm install --prefix ./frontend && npm run build --prefix ./frontend && npm install",
     "cleanModPak": "rm -rf node_modules package-lock.json",
+    "cleanAllModPak": "concurrently \"npm run clean:backend\" \"npm run clean:frontend\"",
+     "clean:backend": "cd backend && rm -rf node_modules package-lock.json",
+    "clean:frontend": "cd frontend && rm -rf node_modules package-lock.json",
     "start:devv": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
     "dev:backend": "cd backend && npm run server",
     "dev:frontend": "cd frontend && npm run start",
