--- a/backend/package.json
+++ b/backend/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "sporty-urban-ecommerce-backend",
+  "name": "artist-hub",
   "version": "1.0.0",
-  "description": "Backend for Sporty Urban E-commerce",
+  "description": "Backend for artist-hub",
   "main": "server.js",
   "type": "commonjs",
   "scripts": {
-    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:prod",
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "start:prod": "node server.js",
     "server": "node server.js",
     "start:dev": "concurrently \"nodemon --ignore 'frontend/*'\" \"npm run frontend\"",
@@ -16,7 +16,7 @@
     "build": "npm install --prefix ./frontend && npm run build --prefix ./frontend && npm install && npm run seed",
     "test": "echo \"Error: no test specified\" && exit 1",
     "cleanModPak": "rm -rf node_modules package-lock.json",
-    "seedUserDb": "node data/seed.js",
+    "seedUserDb": "node data/seedUsers.js",
     "seedProductDb": "node data/seed.js"
   },
   "dependencies": {
