--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,9 +35,8 @@
     "lint:fix": "eslint src --ext .js,.jsx --fix",
     "type-check": "npx tsc --noEmit",
     "cleanModPak": "rm -rf node_modules package-lock.json",
-    "build": "react-scripts --max_old_space_size=4096 build",
-    "build:clean": "rm -rf build && npm run build",
-    "build:analyze": "source-map-explorer 'build/static/js/*.js'"
+     "build": "node --max-old-space-size=256 `which react-scripts` build",
+    "build:memory-optimized": "NODE_OPTIONS=\"--max-old-space-size=256\" react-scripts build"
   },
   "devDependencies": {
     "eslint": "^8.45.0",
